# data-platform

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  readthedocs.yaml  wrangler.jsonc
.devcontainer/: Dockerfile
.github/workflows/: ci.yaml
api/: __init__.py  config.py  dependencies.py  main.py
api/routers/: __init__.py  extracts.py  health.py  pipelines.py
api/schemas/: extract.py  pipeline.py
assets/: __init__.py  definitions.py  google_sheets.py  jobs.py  resources.py  schedules.py
assets/ingestion/: __init__.py  definitions.py  facebook_ads.py  google_ads.py  google_analytics.py  google_sheets.py  jobs.py  paypal.py  resources.py  schedules.py  stripe.py
assets/transformation/: __init__.py  definitions.py  resources.py
clients/: __init__.py  gcp.py
config/: __init__.py  env.py  extractors.py  loaders.py  secrets.py
dbt/: dbt_project.yml
docs/: about.md  docs.json  index.md
docs/data-platform/: architecture.md  index.md
docs/stylesheets/: extra.css
extract/: __init__.py  extractor.py  google_ads_extractor.py  google_analytics_extractor.py  google_sheets_extractor.py  table.py
extract/facebook_ads/: __init__.py  client.py  extract.py
extract/google_ads/: __init__.py  client.py  extract.py
extract/google_analytics/: __init__.py  client.py  extract.py
extract/google_sheets/: __init__.py  client.py  extract.py
extract/paypal/: __init__.py  client.py  extract.py
extract/stripe/: __init__.py  client.py  extract.py
helpers/: __init__.py  authenticator.py  bigquery.py  gcp.py  google_cloud_platform.py
infra/: main.tf  outputs.tf  variables.tf  versions.tf
infra/files/: dagster-code.service  dagster-healthcheck.service  dagster-healthcheck.sh  dagster-healthcheck.timer  dagster.service  dagster.yaml  startup.sh
load/: __init__.py  bigquery_loader.py  config.py  google_cloud_storage_loader.py  loader.py  types.py
load/bigquery/: __init__.py  load.py
load/gcs/: __init__.py  load.py  partition.py
orchestration/: prefect.yaml
orchestration/flows/: google_sheets_to_google_cloud_storage.py
orchestration/tasks/: extract.py  load.py
pipelines/: __init__.py
pipelines/extract/: __init__.py  extractor.py
pipelines/load/: loader.py
scratch/: README.md
tests/: __init__.py  test_authenticator.py  test_bigquery_loader.py  test_clients.py  test_data_platform.py  test_google_ads.py  test_google_analytics.py  test_google_cloud_storage.py  test_google_cloud_storage_loader.py  test_google_sheets.py  test_jobs.py  test_metadata.py  test_parquet.py  test_partitioner.py  test_resources.py  test_schedules.py
tests/api/: __init__.py  conftest.py
tests/assets/: __init__.py
tests/config/: test_secrets.py
tests/load/: __init__.py
transform/: __init__.py  config.yaml  metadata.py  partitioner.py
utils/: __init__.py  parquet.py  storage.py  timestamp.py
(+63 files in other folders)
