[project]
name = "data-platform"
version = "0.1.0"
description = "The data platform for American Beauty Institute."
authors = [
    {name = "Kim, Andrew", email = "andrewkimka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbt-bigquery>=1.10.2",
    "google-ads>=28.2.0",
    "google-analytics-data>=0.19.0",
    "google-api-python-client>=2.185.0",
    "google-auth>=2.41.1",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-storage>=2.19.0",
    "prefect>=3.4.23",
    "prefect-dbt>=0.7.8",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
    "ty>=0.0.1a24",
]
docs = [
    "mkdocs-material>=9.6.22",
]

[tool.coverage.run]
branch = true
source = ["data-platform"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["data-platform"]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
unsafe-fixes = true

lint.select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
  "D",   # pydocstyle
  "PL",  # pylint-like
  "C90", # mccabe
  "PERF", # performance
  "RUF", # ruff-specific
  "PTH", # pathlib
  "FLY", # f-strings
]

lint.ignore = []

exclude = ["tests/data", ".venv", "build", "dist"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # or "numpy" or "pep257"
